Ошибка с тастами на гите